--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,55 @@
+@font-face {
+    font-family: 'EleganTech';
+    src: url('fonts/EleganTech-.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Technoid';
+    src: url(fonts/TECHNOIC.TTF') format('truetype');
+}
+
 body {
-    font-family:'Segoe UI', sans-serif;
-    background-color: #fdfdfd;
+    font-family:'EleganTech', sans-serif;
+    background: linear-gradient(135deg, #222222, #6a1b9a, #222222);
     color: var (--text-color, #333);
     margin: 0;
     padding: 2rem;
-    max-width: 800px;
-    margin-inline:auto;
+    width: 100vw;
 }
 
 h1 {
-    color: var(--primary-color, #007bff);
+    font-family: 'Technoid', sans-serif;
+    text-align: center;
+    color: var(--primary-color, #6A1B9A);
     font-size:2.5rem;
     margin-bottom:0.5rem;
 }
 
 h2 {
-    color: var(--primary-color, #007bff);
+    family-font: 'Technoid', sans-serif;
+    color: var(--primary-color, #E7AA51);
     margin-top:2.5rem;
 }
 
 p {
+    font-family: 'EleganTech', sans-serif;
+    font-color: #9E9E9E;
     font-size:1.2rem;
     line-height:1.6;
 }
 
+.hero {
+    background: linear-gradient (180deg, #E7AA51, #FFE499, #A26E2E, #E7AA51, #AC7031)
+    width: 100%;
+    height: 300px;
+}
+
 .section {
     margin-top: 2rem;
+    width: 100%;
 }
 
 .package {
-    background: var(--light-bg-color, #f8f9fa);
+    background: linear-gradient (180deg, #E7AA51, #FFE499, #A26E2E, #E7AA51, #AC7031)
     border-left: 6px solid var(--primary-color, #007bff);
     padding: 1rem;
     margin-bottom: 1rem;
@@ -37,7 +57,6 @@ p {
 }
 
 .contact {
-    background: var(--contact-bg-color, #e9ecef);
     padding: 1.5rem;
     border-radius: 8px;
     margin-top: 2rem;
