--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,15 @@
 }
 @font-face {
     font-family: 'Technoid';
-    src: url(fonts/TECHNOID.TTF') format('truetype');
+    src: url('fonts/TECHNOID.TTF') format('truetype');
 }
 
 body {
     font-family:'EleganTech', sans-serif;
     background: linear-gradient(135deg, #222222, #6a1b9a, #222222);
     font-size: 1.5rem;
-    color: var (--text-color, #9E9E9E);
+    font-color:#FFE499);
     margin: 0;
-    padding: 2rem;
     width: 100%;
 }
 
@@ -21,8 +20,9 @@ h1 {
     font-family: 'Technoid', sans-serif;
     text-align: center;
     color: var(--primary-color, #6A1B9A);
-    font-size:3rem;
+    font-size:5rem;
     margin-bottom:0.5rem;
+    padding-top: 1rem;
 }
 
 h2 {
@@ -38,7 +38,6 @@ h3 {
 
 p {
     font-family: 'EleganTech', sans-serif;
-    font-color: #9E9E9E;
     font-size:1.2rem;
     line-height:1.6;
 }
@@ -54,17 +53,18 @@ hr {
     background: linear-gradient(135deg, #E7AA51, #FFE499, #A26E2E, #E7AA51, #AC7031);
     margin: 2rem 0;
 }
+
 .hero {
     background: linear-gradient(180deg, #E7AA51, #FFE499, #A26E2E, #E7AA51, #AC7031);
     text-align: center;
     width: 100%;
-    height: 200px;
+    height: 300px;
     font-size: 3rem;
 }
 
 .ph {
     font-family: 'Technoid', sans-serif;
-    color: var(--primary-color, #6A1B9A);
+    color: var(--primary-color, #222222);
     font-size: 2rem;
     margin-top: 0.5rem;
 }
@@ -80,6 +80,15 @@ hr {
     margin-bottom: 1rem;
     border-radius: 8px;
     text-align: center;
+    font-color: #222222;
+}
+
+.quote {
+    font-family: 'Technoid', sans-serif;
+    color: var(--primary-color, #E7AA51);
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    text-align: center;
 }
 
 .contact {
@@ -92,5 +101,5 @@ footer {
     text-align: center;
     margin-top: 3rem;
     font-size: 0.9rem;
-    color: #777;
+    color: #FFE499;
 }
