--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body {
     color:#FFE499;
     margin: 0;
     width: 100%;
-    padding: 1.5rem;
 }
 
 h1 {
@@ -80,9 +79,9 @@ hr {
 }
 
 .hero-text h1,
-.hero-text h2,
-.hero-text p {
-    margin: 600px 0.3rem 0;
+.hero-text h2 {
+    margin-right: 500px 0.3rem 0;
+    margin-left: 700px 0.3rem 0;
     text-align: center;
 }
 
@@ -159,12 +158,18 @@ a:visited {
     color: #9E9E9E;
 }
 
-footer {
+.footer {
     background: linear-gradient(180deg, #AC7031, #ECAA51, #FFE499, #E7AA51, #8D5A1B);
-    text-align: center;
     margin-top: 3rem;
-    font-size: 0.9rem;
+    height: 50px;
+    padding: 1rem;
+}
+
+.footer p {
+    margin: 0;
+    padding: 1rem;
+    font-family: 'EleganTech', sans-serif;
     color: #222222;
-    padding: 1.5rem;
-    height: 100px
+    font-size: 0.9rem;
+    text-align: center;
 }
